@@ -126,7 +126,11 @@ Of course a filesystem must already exist and have S3 objects with ACL's configu
 .Fl \-accessType
 below);
 users should perform the looback mount with the read-only flag (see
-.Xr mount 8 ) .
+.Xr mount 8 )
+and provide the
+.Fl \-readOnly
+flag to
+.Nm .
 This mode of operation facilitates the creation of public, read-only filesystems.
 .Ss Simultaneous Mounts
 Although it functions over the network, the
@@ -254,6 +258,13 @@ Specify the name of the single file that appears in the
 .Nm
 filesystem.
 Default is `file'.
+.It Fl \-fileMode=MODE
+Specify the UNIX permission bits for the single file that appears in the
+.Nm
+filesystem.
+Default is 0600, unless
+.Fl \-readOnly
+is specified, in which case the default is 0400.
 .It Fl \-force
 Proceed even if the value specified by
 .Fl \-blockSize
@@ -297,6 +308,11 @@ Default value is 500ms.
 .It Fl \-prefix=STRING
 Specify a prefix to prepend to the resource names within bucket that identify each block.
 Default is the empty string.
+.It Fl \-readOnly
+Assume the filesystem is going to be mounted read-only, and return
+.Er EROFS
+in response to any attempt to write.
+This flag also changes the default mode of the backed file from 0600 to 0400.
 .It Fl \-size=SIZE
 Specify the size (in bytes) of the single file to be exported by the filesystem.
 The size may have an optional suffix 'K' for kilobytes, 'M' for megabytes, 'G' for gigabytes, 'T' for terabytes, or 'E' for exabytes.
@@ -317,23 +333,9 @@ In addition,
 accepts all of the generic FUSE options as well.
 Here is a partial list:
 .Bl -tag -width Ds
-.It Fl d
-Enable FUSE debug mode.
-Implies
-.Fl f
-and
-.Fl \-debug .
-.It Fl f
-Run in the foreground (do not fork).
-Implies
-.Fl \-debug .
-.It Fl s
-Run in single-threaded mode.
 .It Fl o Ar allow_root
 Allow root (only) to view backed file.
 .It Fl o Ar allow_other
-Allow all users to view backed file.
-.It Fl o Ar nonempty
 Allow all users to view backed file.
 .It Fl o Ar uid=UID
 Override the user ID of the backed file, which defaults to the current user ID.
@@ -343,6 +345,18 @@ Override the group ID of the backed file, which defaults to the current group ID
 Do synchronous reads.
 .It Fl o Ar max_readahead=NUM
 Set maximum read-ahead (in bytes).
+.It Fl f
+Run in the foreground (do not fork).
+Implies
+.Fl \-debug .
+.It Fl d
+Enable FUSE debug mode.
+Implies
+.Fl f
+and
+.Fl \-debug .
+.It Fl s
+Run in single-threaded mode.
 .El
 .Pp
 In addition,
